@@ -41,8 +41,10 @@ class WarningOnByDefault(Warning):
 
 
 # NOTE:  If you add a new warning class, add it to the man page, too!
-
 class TargetNotBuiltWarning(Warning): # Should go to OnByDefault
+    pass
+
+class CacheV1Warning(WarningOnByDefault):
     pass
 
 class CacheWriteErrorWarning(Warning):
